added email message view